@@ -1,5 +1,6 @@
 plugins {
   id 'application'
+  id 'jacoco'
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -10,6 +11,12 @@ tasks.withType(JavaExec).configureEach {
   jvmArgs.add('--enable-preview')
 }
 
+tasks.withType(Test).configureEach {
+  jvmArgs('--enable-preview')
+
+  finalizedBy jacocoTestReport
+}
+
 repositories {
   mavenCentral()
 }
@@ -17,6 +24,9 @@ repositories {
 dependencies {
   implementation group: 'com.itextpdf', name: 'kernel', version: '7.2.4'
   implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.36'
+
+  testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+  testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.11.0'
 }
 
 application {
